tests/ui/intrinsics/target-feature-available-at-call-site-nonconst.stderr
error: `target_feature_available_at_call_site` requires a string literal argument
  --> $DIR/target-feature-available-at-call-site-nonconst.rs:13:13
   |
LL |     let _ = target_feature_available_at_call_site(feature);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

